--- a/src/dart-league-ui/src/app/app.component.html
+++ b/src/dart-league-ui/src/app/app.component.html
@@ -388,7 +388,7 @@
 
   <!-- Next Steps -->
   <h2>Next Steps</h2>
-  <p>What do you want to do next with your app? Security</p>
+  <p>What do you want to do next with your app? Security signing tests</p>
 
   <input type="hidden" #selection>
 
